# WGPU-Boilerplate

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/renderer/: mod.rs  screen_pipeline.rs
src/renderer/shaders/: screen.wgsl
src/ui/: mod.rs
