[package]
name = "wgpu-winit-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
bytemuck = { version = "1.16.0", features = ["derive", "min_const_generics"] }
wgpu = "0.19.4"
winit = "0.29.15"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
egui = "0.27.2"
